# edge-impulse

./: README.md  data_collection.py  picodrive.ino  picodrive_data_forwarder.ino  power_signature
predictive-motor-maintenance/: README.md  anomaly_detection.ino  motion_simulator.py
ros2/ei_ros2/: package.xml  setup.cfg  setup.py
ros2/ei_ros2/ei_ros2/: ei_node.py  mpu6050_node.py
ros2/nano_data_fwd/: classifier_pub_sub.py  nano_data_fwd.ino
utils/: py_data_forwarder.py
utils/data_splitters/: split_audio.py
utils/most_confident_index/: most_confident_index.ino
